test: :white_check_mark: Adjust test coverage for HATEOAS links implementation
